Continuando levantamento bibliográfico Hipotecarização. Iniciado levantamento bibiligráfico NewNarrative

--- a/Orientacoes/Felipe/Reunioes.org
+++ b/Orientacoes/Felipe/Reunioes.org
@@ -1,3 +1,4 @@
+#+OPTIONS: num:nil
 #+TITLE: Reuniões de Orientação - Felipe
 #+AUTHOR: Gabriel Petrini
 #+DATE: 2020
@@ -83,3 +84,15 @@ con [label="Mudança na\ngovernança corporativa e o\ninvestimento"]
 
 #+RESULTS:
 [[file:capitulos.png]]
+
+* Reunião <2020-09-30 qua>
+
+** Antes da próxima reunião <2020-10-07 qua>
+
+*** TODO Contatar Mariano
+*** TODO Parágrafos sobre objetivo
+*** TODO Kalecki e a financeirização hoje (congresso)
+*** TODO Enviar projeto
+*** TODO Github para poetas
+*** TODO Latex monografia
+*** TODO Link Zotero
